refactor:[#110] 불필요한 guava 의존성 제거