@@ -1,7 +1,6 @@
 package com.aespa.nextplace.util;
 
 import com.aespa.nextplace.model.entity.PlamonRank;
-import com.google.common.collect.ImmutableMap;
 import org.springframework.stereotype.Component;
 
 import java.util.Map;
@@ -9,22 +8,22 @@ import java.util.Map;
 @Component
 public class PlamonRankUtil {
 
-    private final int gatchaPrice = 100;
+    private static final int GATCHA_PRICE = 100;
     private final Map<PlamonRank, Integer> gatchaProbability;
     private final Map<PlamonRank, Integer> salesPrice;
 
     private PlamonRankUtil() {
-        this.gatchaProbability = ImmutableMap.of(
-                PlamonRank.N, 40,
-                PlamonRank.R, 70,
-                PlamonRank.SR, 90,
-                PlamonRank.SSR, 100
+        this.gatchaProbability = Map.ofEntries(
+                Map.entry(PlamonRank.N, 40),
+                Map.entry(PlamonRank.R, 70),
+                Map.entry(PlamonRank.SR, 90),
+                Map.entry(PlamonRank.SSR, 100)
         );
-        this.salesPrice = ImmutableMap.of(
-                PlamonRank.N, 1,
-                PlamonRank.R, 2,
-                PlamonRank.SR, 5,
-                PlamonRank.SSR, 10
+        this.salesPrice = Map.ofEntries(
+                Map.entry(PlamonRank.N, 1),
+                Map.entry(PlamonRank.R, 2),
+                Map.entry(PlamonRank.SR, 5),
+                Map.entry(PlamonRank.SSR, 10)
         );
     }
 
@@ -37,7 +36,7 @@ public class PlamonRankUtil {
     }
 
     public int getGatchaPrice() {
-        return this.gatchaPrice;
+        return this.GATCHA_PRICE;
     }
 
 
